--- a/index.html
+++ b/index.html
@@ -4,14 +4,45 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Abdul Fawaz | MERN Stack Developer</title>
-    <meta name="description" content="I'm Abdul Fawaz, a MERN stack developer building modern, responsive web applications." />
-    <meta name="keywords" content="Abdul Fawaz, MERN, React Developer, Full Stack Developer, Portfolio, Web Developer" />
+    <title>Abdul Fawaz — Full Stack Developer | MERN Stack Expert</title>
+    <meta name="description" content="I'm Abdul Fawaz, a passionate full stack developer specializing in the MERN stack. Explore my web development projects and connect for collaboration." />
+    <meta name="keywords" content="Full Stack Developer, MERN Stack Developer, Abdul Fawaz, React Developer, Node.js, MongoDB, Portfolio, Web Developer India" />
     <meta name="author" content="Abdul Fawaz" />
-
+    <meta name="robots" content="index, follow" />
+    <link rel="canonical" href="https://fawaz-portfolio-gamma.vercel.app/" />
     <link rel="shortcut icon" href="portfolioIcon.png" type="image/x-icon" />
 
-    </head>
+    <!-- Open Graph for Social Sharing -->
+    <meta property="og:title" content="Abdul Fawaz — Full Stack Developer" />
+    <meta property="og:description" content="Check out my MERN stack projects and full stack web apps." />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://fawaz-portfolio-gamma.vercel.app/" />
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Abdul Fawaz — Full Stack Developer" />
+    <meta name="twitter:description" content="Explore Abdul Fawaz's full stack web development portfolio using React, Node.js, MongoDB." />
+
+    <!-- Structured Data (JSON-LD) -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Person",
+      "name": "Abdul Fawaz",
+      "url": "https://fawaz-portfolio-gamma.vercel.app",
+      "jobTitle": "Full Stack Developer",
+      "worksFor": {
+        "@type": "Company",
+        "name": "Alphabit"
+      },
+      "sameAs": [
+        "https://github.com/Fawaz-003",
+        "https://www.linkedin.com/in/abdul-fawaz/"
+      ],
+      "knowsAbout": ["HTML", "CSS", "JavaScript", "React", "Node.js", "Express.js", "MongoDB", "REST APIs"]
+    }
+    </script>
+  </head>
 
   <body>
     <div id="root"></div>
