--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="google-site-verification" content="Hv4u3Ji7EkW_KllHqcgG1oxv0PmV59CuJQBfTMI-9Sc" />
 
     <title>Abdul Fawaz — Full Stack Developer | MERN Stack Expert</title>
     <meta name="description" content="I'm Abdul Fawaz, a passionate full stack developer specializing in the MERN stack. Explore my web development projects and connect for collaboration." />
